# lplayer

./: .gitmodules  CMakeLists.txt  README.md
debian/: changelog  control  copyright  files  menu  rules
linux/: lplayer.spec
src/: CMakeLists.txt  acfun.cpp  acfun.h  detailitem.cpp  detailitem.h  detailitem.ui  detailpage.cpp  detailpage.h  detailview.cpp  httpget.cpp  laboutwidget.cpp  laboutwidget.h  lplayer.desktop  lplayer.pro  lplayer_zh_CN.qm  lplayer_zh_CN.ts  main.cpp  mplayer.cpp  mplayer.h  mylistwidget.cpp  player.cpp  player.h  player.ui  plugins.cpp  pyapi.cpp  rc.qrc  resplugin.cpp  searcher.cpp  settingsdialog.cpp  settingsdialog.ui  videocombiner.cpp  webvideo.cpp  webvideo.h  youget.cpp  youget.h
src/plugins/: flvcd_parser.py  lplayer_utils.py  plugin_qq.py  plugin_tudou.py  res_soku_movie.py  res_soku_tv.py  searcher_soku.py  utils.py
src/skins/lplayer/: fixed_sizes  skin.qss
